--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^5.4.2",
+    "@mantine/ds": "^5.4.2",
+    "@mantine/hooks": "^5.4.2",
+    "@tabler/icons": "^1.101.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.144.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "framer-motion": "^7.5.0",
     "three": "^0.145.0",
     "typescript": "4.8.4"
   }
