--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.144.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
     "typescript": "4.8.4"
   }
