--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@react-three/drei": "^9.34.0",
+    "@react-three/fiber": "^8.8.9",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
