--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "next-auth": "^4.12.3",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
