--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/ds": "^5.4.2",
     "@mantine/hooks": "^5.4.2",
     "@tabler/icons": "1.71.0",
+    "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
