--- a/package.json
+++ b/package.json
@@ -10,29 +10,32 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@mantine/carousel": "^5.5.4",
     "@mantine/core": "^5.4.2",
     "@mantine/ds": "^5.4.2",
     "@mantine/hooks": "^5.4.2",
     "@tabler/icons": "1.71.0",
+    "autoprefixer": "^10.4.12",
+    "embla-carousel-autoplay": "^7.0.3",
+    "embla-carousel-react": "^7.0.3",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "postcss": "^8.4.17",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@react-three/drei": "^9.34.0",
     "@react-three/fiber": "^8.8.9",
-    "@types/node": "18.7.23",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^18.8.3",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@types/three": "^0.144.0",
-    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "next-auth": "^4.12.3",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
     "three": "^0.145.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   }
 }
