--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@mantine/carousel": "^5.5.4",
-    "@mantine/core": "^5.4.2",
-    "@mantine/ds": "^5.4.2",
+    "@mantine/carousel": "5.4.2",
+    "@mantine/core": "5.4.2",
     "@mantine/hooks": "^5.4.2",
-    "@tabler/icons": "1.71.0",
     "autoprefixer": "^10.4.12",
     "embla-carousel-autoplay": "^7.0.3",
     "embla-carousel-react": "^7.0.3",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "nodemailer": "^6.8.0",
     "postcss": "^8.4.17",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "sharp": "^0.31.1",
     "tailwindcss": "^3.1.8"
   },
@@ -33,6 +33,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/three": "^0.144.0",
+    "axios": "^1.1.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "next-auth": "^4.12.3",
