--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@mantine/carousel": "5.4.2",
     "@mantine/core": "5.4.2",
+    "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.4.2",
     "autoprefixer": "^10.4.12",
     "embla-carousel-autoplay": "^7.0.3",
