--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@mantine/carousel": "5.4.2",
     "@mantine/core": "5.4.2",
     "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.4.2",
     "autoprefixer": "^10.4.12",
-    "embla-carousel-autoplay": "^7.0.3",
-    "embla-carousel-react": "^7.0.3",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
+    "next-seo": "^5.6.0",
     "nodemailer": "^6.8.0",
     "postcss": "^8.4.17",
     "react": "^18.2.0",
@@ -37,8 +35,8 @@
     "axios": "^1.1.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "next-auth": "^4.12.3",
     "three": "^0.145.0",
+    "three-stdlib": "^2.17.3",
     "typescript": "^4.8.4"
   }
 }
