--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
-    "@mantine/core": "5.4.2",
+    "@mantine/core": "^5.4.2",
     "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.4.2",
     "autoprefixer": "^10.4.12",
