--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@mantine/carousel": "^5.8.3",
     "@mantine/core": "^5.4.2",
     "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.4.2",
