--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^5.5.5",
     "@mantine/hooks": "^5.4.2",
     "autoprefixer": "^10.4.12",
+    "embla-carousel-autoplay": "^7.0.5",
     "framer-motion": "^7.5.3",
     "gsap": "^3.11.3",
     "next": "12.3.1",
